# IOT_Garden_v2

./: .gitignore  CMakeLists.txt  agent.md  readme.md
main/: CMakeLists.txt  config.h  idf_component.yml  main.c
main/config/: ir_codes.h  pins.h
main/modules/actuators/buzzer/: buzzer.c  buzzer.h
main/modules/actuators/rgb_led/: rgb_led.c  rgb_led.h
main/modules/actuators/w2812b/: w2812b.c  w2812b.h
main/modules/actuators/water_pump/: water_pump.c  water_pump.h
main/modules/clock/: clock.c  clock.h
main/modules/control/: automation.c  automation.h  control.c  control.h
main/modules/control/rules/: default_rules.c  default_rules.h
main/modules/display/: OLED_display.c  OLED_display.h
main/modules/input/: ir_remote.c  ir_remote.h
main/modules/sensors/: adc_shared.c  adc_shared.h
main/modules/sensors/sensor_dht/: sensor_dht.c  sensor_dht.h
main/modules/sensors/sensor_light/: sensor_light.c  sensor_light.h
main/modules/sensors/sensor_soil/: sensor_soil.c  sensor_soil.h
main/modules/sensors/sensor_water/: sensor_water.c  sensor_water.h
main/modules/state/: state.c  state.h
