idf_component_register(SRCS "main.c"
                            "modules/sensors/adc_shared.c"
                            "modules/state/state.c"
                            "modules/display/OLED_display.c"
                            "modules/sensors/sensor_dht/sensor_dht.c"
                            "modules/sensors/sensor_light/sensor_light.c"
                            "modules/sensors/sensor_soil/sensor_soil.c"
                            "modules/sensors/sensor_water/sensor_water.c"
                    INCLUDE_DIRS "."
                                  "modules/state"
                                  "modules/display"
                                  "modules/sensors"
                                  "modules/sensors/sensor_dht"
                                  "modules/sensors/sensor_light"
                                  "modules/sensors/sensor_soil"
                                  "modules/sensors/sensor_water"
                                  "config")
